--- a/jobs/mpi-tcp.yaml
+++ b/jobs/mpi-tcp.yaml
@@ -2,6 +2,7 @@ apiVersion: kubeflow.org/v1alpha2
 kind: MPIJob
 metadata:
   name: efa-test-tcp
+  namespace: default
 spec:
   slotsPerWorker: 72
   cleanPodPolicy: Running
